2. Allow rounded tooltips when not compositing.
3. Fix kwin titlebar blending for striped backgrounds.
4. Simpify faded menu item code.
5. When drawing progressbar contents and label, use same calculations
   to determine position. Fixes odd text on some of Krita's progressbar/spin
   button widgets.
6. Fix menubar-hiding kwin icon when not blending menubar/titlebar.

1.6.0
-----
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
 3. Use square-ish focus for view items if using squared selection.
 4. If titlebar opacity=100, and window/dialog opacity does not, then use
    window/dialog opacity for titlebar.
 5. Fix some compiler warnings under openSUSE 11.3
 6. Refactor blur-behind code.
 7. Update XBar code to r1158
 8. Remove KFileDialog code - has been in KDE since 4.1
 9. Dont apply background opacity to kaffeine.
10. Remove amarok from list off apps not to apply opacity to.
11. Fix MDI window border when using opacity.
12. Improved glow mouse-over for non-standard sidebar buttons.
13. Fix dock widget titlebar alignment when set to center on full width (not
    just on text space width).
14. Add option to use slight rounding for window decorations - set in style
    config, as option also affects MDI windows.
15. Added option to specify tooltip background appearance.
16. Added options to draw shaded, or faded, group boxes.
17. Added options to specify location of group box label; inside, outside, centered.
18. Fix disabled looking slider in KDE colour dialog.
19. Draw coloured mouse over for 'checked' toggle buttons.
20. Just draw bold title for KMenu titles.
21. Use Highlight colour for default button glow.
22. When KDE4's 'Inactive selection changes colour' setting is enabled, dont change
    the selection colour - use same colour, but set 50% transparent.
23. Add 4 pixel padding to dock window titlebars.
24. Default sub-menu popup delay to 225 - matches Gtk2 standard default.